// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with title 1`] = `
.emotion-0 {
  font: var(--echoes-typography-heading-xlarge);
  color: rgb(29,33,47);
}

<div>
  <div>
    <h2
      class="emotion-0 emotion-1"
      id="modal_header_title"
    >
      Foo
    </h2>
  </div>
</div>
`;

exports[`should render with title and description 1`] = `
.emotion-0 {
  font: var(--echoes-typography-heading-xlarge);
  color: rgb(29,33,47);
}

.emotion-2 {
  font: var(--echoes-typography-text-default-regular);
  margin-top: 0.5rem;
  color: rgb(62,67,87);
}

<div>
  <div>
    <h2
      class="emotion-0 emotion-1"
      id="modal_header_title"
    >
      Foo
    </h2>
    <p
      class="emotion-2 emotion-3"
    >
      Bar
    </p>
  </div>
</div>
`;

exports[`should use the default title if not provided 1`] = `
.emotion-0 {
  font: var(--echoes-typography-heading-xlarge);
  color: rgb(29,33,47);
}

<div>
  <div>
    <h2
      class="emotion-0 emotion-1"
      id="modal_header_title"
    >
      Modal title
    </h2>
  </div>
</div>
`;
